# ScamShieldAI

./: .env  .python-version  README.md  app.py  main.py  pyproject.toml  requirements.txt
instance/: database.db
scam_analyzer/: app.py  extensions.py  models.py  translations.py
scam_analyzer/instance/: database.db
scam_analyzer/routes/: analyze.py  auth.py  pages.py
scam_analyzer/services/: ai.py  stats.py
scam_analyzer/static/: chat.js  style.css
scam_analyzer/static/js/: chat.js  history.js  scroll.js  ui.js
scam_analyzer/templates/: index.html  login.html  plans.html  register.html  settings.html
static/: style.css
templates/: index.html  login.html  profile.html  register.html  statistics.html
